--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,9 +11,11 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - uses: DarKeNHearT/terraform@main
+
+     bnvnbvn
         with:
            args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
-        env:
+        env:s
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
