--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,8 +11,8 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - uses: DarKeNHearT/terraform@main
-
-     bnvnbvn
+sdsgdsg
+     sdgds
         with:
            args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
         env:s
