--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,11 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - uses: DarKeNHearT/terraform@main
-sdsgdsg
-     sdgds
         with:
-           args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
-        env:s
+          args: --acl public-read --follow-symlinks --delete
+        env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
