--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout
     - uses: DarKeNHearT/terraform@main
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
